[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydoglog"
version = "0.1.0"
description = "Python client library for the DogLog pet tracking service"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "requests>=2.28",
    "aiohttp>=3.8",
]

[project.optional-dependencies]
cli = ["click>=8.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "responses>=0.23",
    "aioresponses>=0.7",
]

[project.scripts]
doglog = "pydoglog.cli.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pydoglog"]
